Fix navigation extending off-screen in IE11
IE11 is tripping over the use of flex-wrap and is instead presenting all links as a single, horizontally scrolling row.

This commit reverts the use of flexbox on IE11 (and IE10) specifically, falling back to the previous inline-block behaviour. This means that the previous accessibility issues are now present in IE11 again, but having the navigation wrap seems like a higher priority usability issue to address.

--- a/src/govuk/components/service-header/_index.scss
+++ b/src/govuk/components/service-header/_index.scss
@@ -120,6 +120,17 @@
     @include govuk-media-query($from: tablet) {
       display: flex;
       flex-wrap: wrap;
+
+      // However... IE11 totally trips over flexbox and doesn't wrap anything,
+      // making all of the items into a single, horizontally scrolling row,
+      // which is no good. This CSS hack removes the flexbox definition for
+      // IE 10 & 11, reverting it back to the non-flexbox version.
+      //
+      // Solution taken from https://stackoverflow.com/questions/11173106/apply-style-only-on-ie#answer-36448860
+      // which also includes an explanation of why this works
+      @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+        display: block;
+      }
     }
   }
 
